--- a/application/modules/relatorio/views/scripts/index/geral.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral.jrxml
@@ -120,7 +120,6 @@ FROM
      LEFT OUTER JOIN "public"."despesas" despesas ON financeiro."id" = despesas."financeiro_id"
 WHERE
      financeiro."programacao_id" = $P{programacao_id}
-     AND ()
 GROUP BY
      financeiro_descricao,
      financeiro_valor,
@@ -152,11 +151,11 @@ GROUP BY
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
 	<parameter name="user_id" class="java.lang.Integer"/>
-	<parameter name="mostrar_fisico" class="java.lang.Boolean">
-		<defaultValueExpression><![CDATA[false]]></defaultValueExpression>
+	<parameter name="mostrar_fisico" class="java.lang.Integer">
+		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
 	</parameter>
-	<parameter name="mostrar_financeiro" class="java.lang.Boolean">
-		<defaultValueExpression><![CDATA[false]]></defaultValueExpression>
+	<parameter name="mostrar_financeiro" class="java.lang.Integer">
+		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[with 	n1 as ( SELECT  p1.id AS p1_id, p1.singular as p1_singular, p1.has_responsavel as p1_has_responsavel, p1.has_supervisor as p1_has_supervisor, p1.has_equipe as p1_has_equipe, p1.menu as p1_menu, p1.descricao as p1_descricao, p1.ordem as p1_ordem, p1.programacao_id as p1_programacao_id, p1.equipe as p1_equipe, p1.responsavel as p1_responsavel, p1.supervisor as p1_supervisor, p1.instrumento_id as p1_instrumento_id
@@ -209,7 +208,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 			<band height="747">
 				<property name="local_mesure_unitheight" value="pixel"/>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				<printWhenExpression><![CDATA[$P{mostrar_fisico}]]></printWhenExpression>
+				<printWhenExpression><![CDATA[$P{mostrar_fisico}==1]]></printWhenExpression>
 				<frame>
 					<reportElement x="360" y="540" width="192" height="104" uuid="f8c78faf-792d-401b-8999-7b8a399c1125"/>
 					<staticText>
@@ -524,7 +523,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 				</textField>
 				<staticText>
 					<reportElement style="Detail" positionType="Float" x="0" y="46" width="555" height="15" uuid="37953b06-7767-42cd-ae57-a3ad26b28da2">
-						<printWhenExpression><![CDATA[$P{mostrar_fisico}]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$P{mostrar_fisico}==1]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font isBold="true"/>
@@ -534,7 +533,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 				<componentElement>
 					<reportElement style="Detail" positionType="Float" x="0" y="63" width="555" height="42" uuid="d50ad6cc-f43e-47ec-a3f2-6d9e56fecdab">
 						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-						<printWhenExpression><![CDATA[$P{mostrar_fisico}]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$P{mostrar_fisico}==1]]></printWhenExpression>
 					</reportElement>
 					<jr:list xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" printOrder="Vertical">
 						<datasetRun subDataset="operativosDS" uuid="cf87f43e-7bc9-4180-8063-d58f56f2673d">
@@ -655,7 +654,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 				</componentElement>
 				<frame>
 					<reportElement style="Detail" positionType="Float" x="0" y="106" width="555" height="37" uuid="2f940162-8f41-4931-918f-72fd7acc0875">
-						<printWhenExpression><![CDATA[$P{mostrar_financeiro}]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$P{mostrar_financeiro}.equals(new Integer("1") )]]></printWhenExpression>
 					</reportElement>
 					<componentElement>
 						<reportElement positionType="Float" stretchType="ElementGroupBottom" x="0" y="26" width="555" height="11" uuid="b1244040-bf7f-4ba3-98f6-7ab513056695">
